--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,16 @@
   color: white;
 }
 
+.contaier {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: white;
+}
+
 .App-link {
   color: #61dafb;
 }
